[gd_scene load_steps=6 format=3 uid="uid://crwycjubni1xv"]

[ext_resource type="Script" path="res://main.gd" id="1_cu6av"]
[ext_resource type="PackedScene" uid="uid://cjjkof4262hlk" path="res://scenario.tscn" id="1_dp7bd"]
[ext_resource type="PackedScene" uid="uid://cpthqe6olf0rt" path="res://player.tscn" id="3_jirnx"]
[ext_resource type="PackedScene" uid="uid://db6tch101intn" path="res://ball.tscn" id="3_qfda0"]
[ext_resource type="FontFile" uid="uid://uybmqy0imgr8" path="res://pong-score.ttf" id="4_kyyv2"]

[node name="Main" type="Node"]
script = ExtResource("1_cu6av")

[node name="Scenario" parent="." instance=ExtResource("1_dp7bd")]

[node name="Player1" parent="." instance=ExtResource("3_jirnx")]
position = Vector2(1.5, 60)
x_start = 1.5

[node name="Player2" parent="." instance=ExtResource("3_jirnx")]
position = Vector2(158.5, 60)
controller_index = 1
is_cpu = true
x_start = 158.5

[node name="Ball" parent="." instance=ExtResource("3_qfda0")]
position = Vector2(81, 60)

[node name="Score1" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.588235)
offset_left = 40.0
offset_top = 6.0
offset_right = 56.0
offset_bottom = 22.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_kyyv2")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.588235)
offset_left = 120.0
offset_top = 6.0
offset_right = 136.0
offset_bottom = 22.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_kyyv2")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="out" from="Ball" to="." method="_on_ball_out"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
